# PLINK-File-Analyser

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/data/: GenotypeBlock.cpp  GenotypeBlock.h
src/genome/: GenomeDetector.cpp  GenomeDetector.h
src/gui/: MainWindow.cpp  MainWindow.h
src/plink/: BedReader.cpp  BedReader.h  PlinkLoader.cpp  PlinkLoader.h
src/qc/: QCEngine.cpp  QCEngine.h  QCParallelEngine.cpp  QCParallelEngine.h  QCWorker.cpp  QCWorker.h
